--- a/src/public/css/sesionBloque.css
+++ b/src/public/css/sesionBloque.css
@@ -15,6 +15,8 @@ body {
 }
 
 .table-container {
+    height: 300px;            /* Altura fija para scroll */
+    overflow-y: auto;         /* Scroll dentro del contenedor */
     overflow-x: auto;
     margin: 32px auto;
     max-width: 900px;
