--- a/src/public/css/bloque.css
+++ b/src/public/css/bloque.css
@@ -13,6 +13,8 @@ body {
 
 .title {
     text-align: center;
+    margin-bottom: 0;
+    margin-top: 2.5em;
 }
 
 
@@ -21,7 +23,8 @@ body {
     overflow-y: auto;
     overflow-x: auto;
     margin: 32px auto;
-    max-width: 900px;
+    margin-top: 0;
+    max-width: 1200px;
     background: transparent;
     border-radius: 18px;
     box-shadow: 0 8px 32px rgba(41, 44, 255, 0.15);
