--- a/src/public/css/sesionBloque.css
+++ b/src/public/css/sesionBloque.css
@@ -12,6 +12,8 @@ body {
 
 .title {
     text-align: center;
+    margin-bottom: 0;
+    margin-bottom: 2.5em;
 }
 
 .table-container {
@@ -19,6 +21,7 @@ body {
     overflow-y: auto;
     overflow-x: auto;
     margin: 32px auto;
+    margin-top: 0;
     max-width: 900px;
     background: transparent;
     border-radius: 18px;
